# Hakase-bio

./: HakaseAI_Glossary.md  HakaseAI_Platform_and_User_Guide.md  HakaseAI_Product_Features.md  Hakase_BioTwin_Boltz2_Review_and_Expansion_Plan.docx  Hakase_BioTwin_L1_L2_Algorithm_Reference.docx  Hakase_BioTwin_and_Hakase_AI_Platform_Overview.docx  Hakase_Boltz2_Expansion_Implementation_Prompt.md  Hakase_L1_vs_L1plus_vs_RealWorld_ADMET.xlsx  Hakase_L1_vs_RealWorld_ADMET.xlsx  L1_CALIBRATION_2026-05.md  L1_SIMULATION_AUDIT.md  README.md  hakase-ai-glossary.md  hakase-ai-input-fields.md  hakase-ai-user-manual.md  package.json  pnpm-workspace.yaml  pyproject.toml  replit.md  replit.nix  tsconfig.json
attached_assets/: BioDigital_Twin_AI_Models_Guide_1773528439543.docx  BioDigital_Twin_API_Integration_Guide_1773517858550.docx  BioDigital_Twin_Client_Side_Ephemeral_Processing_1773508671577.docx  BioDigital_Twin_Product_Guide_1773441589319.docx  BioDigital_Twin_The_Story_1773524383949.docx  BioDigital_Twin_UI_Specification_1773435601007.docx  Diagen_to_BioTwin_Story_1773441599484.docx  HakaseAI_HAIOps_Framework_BioDigital_Twin_1774680903645.docx  HakaseAI_PROCOVA_Layer4_Feature_Spec_1774864893374.docx  HakaseAI_PreTrained_Model_Integration_Roadmap_1777224756865.docx  HakaseAI_PreTrained_Models_Portfolio_1778043255490.xlsx  HakaseBio_4Layer_Architecture_Research_1777581091668.docx  HakaseBio_Layer3_InSilico_Surrogate_Spec_1777808267607.docx  HakaseBio_Layer3_InSilico_Surrogate_Spec_v1.1.md  HakaseBio_v2.0.0_Confirmation_Architecture_Spec_1777963664677.docx  (+36 more)
(+205 files in other folders)
